2017-01-18 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #79381: Migrate to Doctrine
	* Resolves #79380: Fix double translation of radio button labels
	* Follow-up to Resolves #79381: Migrate to Doctrine
	* Resolves #79186: Evaluation uniqueGlobal reacts to own email address in edit mode
	* Further follow-up to Resolves #79381: Migrate to Doctrine

2017-01-15 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Require TYPO3 CMS 7.6

2017-01-12 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #76190: static calls for HtmlUtility methods
	* Resolves #76524: No text replacement for missing gender
	* Resolves #77218: Site name will not be accepted
	* Resolves #77227: plugin.tx_srfeuserregister_pi1.email.HTMLMail has no effect
	* Resolves #78725: Field address should be placed into parseValues
	* Update version to 4.0.3

2016-04-12 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #75512: Follow-up to Auto-login on create throws fatal error

2016-04-11 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #75513: Typing error in CreateActionController.php
	* Resolves #75512: Auto-login on create throws fatal error

2016-04-07 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #75438: PHP 5.6 Runtime Deprecation Notice

2016-04-01 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #75364: PHP Runtime Deprecation in PHP 5.6
	* Fix incorect characters in extconf.php

2016-02-19 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Update version to 4.0.2

2016-02-16 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #73494: Fatal error: Call to a member function initCountrySubdivisions() on a non-object

2016-02-15 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #72446: Edit View never to be rendered
	* Resolves #72541: Version number in composer.json
	* Resolves #72814: evalValues preg doesn't work properly
	* Resolves #72958: evalValues for gender fails
	* Update to the manual
	* Update version to 4.0.1
